# HElib

./: CMakeLists.txt
.github/workflows/: github-ci.yml
benchmarks/: CMakeLists.txt  bgv_common.h
examples/matmul_tutorial/: CMakeLists.txt  README.cpp  README.md  demo0.cpp  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  tutorial.md  utils.h
examples/tutorial/: 09_ckks_keygen_serialization.cpp  CMakeLists.txt
include/helib/: ClonedPtr.h  Context.h  Ctxt.h  EncodedPtxt.h  EncryptedArray.h  Matrix.h  NumbTh.h  PAlgebra.h  Ptxt.h  hypercube.h  keys.h  matmul.h  partialMatch.h  permutations.h  query.h  timing.h
misc/: format.sh
misc/psi/io/: io.h  stream_dispenser.h
misc/psi/lookup/: lookup.cpp  lookuptypetest.cpp  lookuptypetest_oldContains.cpp
misc/psi/tests/: gen-params.batx  lookup.bats  scoring.bats
src/: Context.cpp  EncryptedArray.cpp  PolyMod.cpp  PolyModRing.cpp  Ptxt.cpp  binaryArith.cpp  keySwitching.cpp  keys.cpp  matmul.cpp  permutations.cpp
tests/: CMakeLists.txt  GTestApproxNums.cpp  GTestBinaryCompare.cpp  GTestEaCx.cpp  GTestEvalMap.cpp  GTestExtractDigits.cpp  GTestFatboot.cpp  GTestGeneral.cpp  GTestIntraSlot.cpp  GTestPAlgebra.cpp  GTestPowerful.cpp  GTestThinEvalMap.cpp  GTestThinboot.cpp  TestBGV.cpp  TestBinIO.cpp  TestBootstrappingWithMultiplications.cpp  TestCKKS.cpp  TestClonedPtr.cpp  TestContext.cpp  TestCtxt.cpp  TestEncryptedArray.cpp  TestHEXL.cpp  TestIO.cpp  TestMatmulCKKS.cpp  TestMatrix.cpp  TestPartialMatch.cpp  TestPermutations.cpp  TestPtxt.cpp  TestQuery.cpp  TestSet.cpp
utils/: CMakeLists.txt
utils/coders/: encode.py
utils/common/: Reader.h  TOC.h  common.h  stream_dispenser.h
utils/crypto/: CMakeLists.txt  decrypt.cpp  encrypt.cpp
utils/key-gen/: CMakeLists.txt  README.md  gen-data.cpp  key-gen.cpp
utils/test_bootstrapping/: CMakeLists.txt  test_bootstrap_keygen.cpp
utils/tests/: crypto.bats  full-pipeline.bats  key-gen-crypto.bats  key-gen.bats  std.bash
